tests/compiler/errors/selective_import_missing_symbol.casa
# expect: UNDEFINED_NAME
import "../fixtures/selective_import_lib.casa" { not_here }

not_here
